--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "rustysentry"
+author = "Liu, Ziyi <lavandejoey@outlook.com>"
+about = "A tool for detecting sensitive information in Git repositories by Rust."
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version = "4.1.11", features = ["derive"]}
+
