--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version = "4.1.11", features = ["derive"]}
-git2
+clap = { version = "4", features = ["derive", "clap_derive"] }
+git2 = { version = "0.17.1" }
+chrono = { version = "0.4" }
+log = { version = "0.4.17" }
+env_logger = { version = "0.10.0" }
+serde = { version = "1.0", features = ["derive"] }
+serde_derive = { version = "1.0.158" }
+serde_yaml = { version = "0.9.19" }
+openssl-sys = { version = "0.9.82" }
+toml = { version = "0.7.3" }
